--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 euclid = "0.22.7"
 ggez = "0.8.1"
+hecs = "0.9.0"
 image = "0.24.4"
 rand = "0.8.5"
 rand_seeder = "0.2.3"
